<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.HomeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:alpha="0.7"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/f_image" />

        <include
            android:id="@+id/logo_layout"
            layout="@layout/logo_text_layout" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo_layout"
            android:overScrollMode="never">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/linearLayoutUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_140sdp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:id="@+id/imageViewMyVideos"
                                android:layout_width="@dimen/_100sdp"
                                android:layout_height="@dimen/_100sdp"
                                android:layout_centerInParent="true"
                                android:layout_gravity="center_horizontal"
                                android:adjustViewBounds="true"
                                app:srcCompat="@drawable/home_image" />

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="@dimen/_55sdp"
                                android:layout_height="@dimen/_55sdp"
                                android:layout_centerInParent="true"
                                android:layout_gravity="center"
                                android:adjustViewBounds="true"
                                app:srcCompat="@drawable/rating" />

                            <com.android.highreels.customViewRegular.RegularTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="@dimen/_30sdp"
                                android:text="@string/my_video"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_12ssp" />

                        </RelativeLayout>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_140sdp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:id="@+id/imageViewCreateVideos"
                                android:layout_width="@dimen/_100sdp"
                                android:layout_height="@dimen/_100sdp"
                                android:layout_centerInParent="true"
                                android:layout_gravity="center_horizontal"
                                android:adjustViewBounds="true"
                                app:srcCompat="@drawable/home_image" />

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="@dimen/_55sdp"
                                android:layout_height="@dimen/_55sdp"
                                android:layout_centerInParent="true"
                                android:layout_gravity="center"
                                android:adjustViewBounds="true"
                                app:srcCompat="@drawable/video_editing" />

                            <com.android.highreels.customViewRegular.RegularTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="@dimen/_30sdp"
                                android:text="@string/create_video"
                                android:textColor="@color/white" />

                        </RelativeLayout>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/linearLayoutMid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/linearLayoutUp"
                    android:layout_marginTop="@dimen/_15sdp">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_140sdp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:id="@+id/imageViewFriendsVideos"
                                android:layout_width="@dimen/_100sdp"
                                android:layout_height="@dimen/_100sdp"
                                android:layout_centerInParent="true"
                                android:layout_gravity="center_horizontal"
                                android:adjustViewBounds="true"
                                app:srcCompat="@drawable/home_image" />

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="@dimen/_55sdp"
                                android:layout_height="@dimen/_55sdp"
                                android:layout_centerInParent="true"
                                android:layout_gravity="center"
                                android:adjustViewBounds="true"
                                app:srcCompat="@drawable/youtube" />

                            <com.android.highreels.customViewRegular.RegularTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="@dimen/_30sdp"
                                android:text="@string/friend_video"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_12ssp" />

                        </RelativeLayout>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_140sdp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:id="@+id/imageViewMyAccount"
                                android:layout_width="@dimen/_100sdp"
                                android:layout_height="@dimen/_100sdp"
                                android:layout_centerInParent="true"
                                android:layout_gravity="center_horizontal"
                                android:adjustViewBounds="true"
                                app:srcCompat="@drawable/home_image" />

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="@dimen/_55sdp"
                                android:layout_height="@dimen/_55sdp"
                                android:layout_centerInParent="true"
                                android:layout_gravity="center"
                                android:adjustViewBounds="true"
                                app:srcCompat="@drawable/account" />

                            <com.android.highreels.customViewRegular.RegularTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="@dimen/_30sdp"
                                android:text="@string/account"
                                android:textColor="@color/white" />

                        </RelativeLayout>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/linearLayoutMid"
                    android:layout_marginTop="@dimen/_15sdp">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_140sdp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:id="@+id/imageViewAddFriend"
                                android:layout_width="@dimen/_100sdp"
                                android:layout_height="@dimen/_100sdp"
                                android:layout_centerInParent="true"
                                android:layout_gravity="center_horizontal"
                                android:adjustViewBounds="true"
                                app:srcCompat="@drawable/home_image" />

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="@dimen/_55sdp"
                                android:layout_height="@dimen/_55sdp"
                                android:layout_centerInParent="true"
                                android:layout_gravity="center"
                                android:adjustViewBounds="true"
                                app:srcCompat="@drawable/add_friend" />

                            <com.android.highreels.customViewRegular.RegularTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="@dimen/_30sdp"
                                android:text="@string/add_friend"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_12ssp" />

                        </RelativeLayout>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_140sdp"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:visibility="gone">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="@dimen/_100sdp"
                                android:layout_height="@dimen/_100sdp"
                                android:layout_centerInParent="true"
                                android:layout_gravity="center_horizontal"
                                android:adjustViewBounds="true"
                                app:srcCompat="@drawable/home_image" />

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="@dimen/_55sdp"
                                android:layout_height="@dimen/_55sdp"
                                android:layout_centerInParent="true"
                                android:layout_gravity="center"
                                android:adjustViewBounds="true"
                                app:srcCompat="@drawable/account" />

                            <com.android.highreels.customViewRegular.RegularTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="@dimen/_30sdp"
                                android:text="Account"
                                android:textColor="@color/white" />

                        </RelativeLayout>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </ScrollView>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>